change date format

--- a/main/templates/main/analytic_detail.html
+++ b/main/templates/main/analytic_detail.html
@@ -30,7 +30,7 @@
                 height="{{ analytic.count_percent }}"
                 class="analytics-chart-bar"
                 >
-                <title>{{ analytic.count_exact }} hits during {{ day|date:'F j, Y' }}</title>
+                <title>{{ analytic.count_exact }} hits during {{ day|date:'F d, Y' }}</title>
             </rect>
 
             <text
