--- a/main/templates/main/transparency.html
+++ b/main/templates/main/transparency.html
@@ -18,7 +18,7 @@
                 height="{{ analytic.count_percent }}"
                 class="analytics-chart-bar"
                 >
-                <title>{{ analytic.count }} new users signed up during {{ day|date:'F j, Y' }}</title>
+                <title>{{ analytic.count }} new users signed up during {{ day|date:'F d, Y' }}</title>
             </rect>
 
             <text
