--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -11,11 +11,11 @@
           <h1>{{ post.title }}</h1>
           <p>
             {% if post.published_at and post.is_published %}
-            <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'d M Y' }}</time>
+            <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'F d, Y' }}</time>
             {% elif post.published_at and not post.is_published %}
-            SCHEDULED for <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'d M Y' }}</time>
+            SCHEDULED for <time datetime="{{ post.published_at|date:'Y-m-d' }}" itemprop="datePublished">{{ post.published_at|date:'F d, Y' }}</time>
             {% else %}
-            DRAFT — Last updated on <time datetime="{{ post.updated_at|date:'Y-m-d' }}" itemprop="dateModified">{{ post.updated_at|date:'d M Y' }}</time>
+            DRAFT — Last updated on <time datetime="{{ post.updated_at|date:'Y-m-d' }}" itemprop="dateModified">{{ post.updated_at|date:'F d, Y' }}</time>
             {% endif %}
             {% if request.user.is_authenticated and request.subdomain == request.user.username %}
             | <a href="{% url 'post_update' post.slug %}">Edit post</a>
