--- a/main/templates/main/blog_index.html
+++ b/main/templates/main/blog_index.html
@@ -18,7 +18,7 @@
     <h1 class="blog-title" itemprop="name">{{ blog_user.blog_title }}</h1>
     {% endif %}
 
-    <nav class="blog-pages">
+    <nav class="navigation">
         <ul>
         {% for page in pages %}
             <li><a href="{% url 'page_detail' page.slug %}">{{ page.title }}</a></li>
